# rust-expense-tracker

./: .env.dummy  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: rust.yml
migrations/: 20260710082442_init_schema.sql  20260714125716_add_users.sql
src/: auth.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  state.rs
src/handlers/: category.rs  expense.rs  report.rs  user.rs
src/models/: category.rs  expense.rs  report.rs  user.rs
src/state/: category.rs  expense.rs  report.rs  user.rs
tests/: api.rs  auth.rs  reports.rs
