[package]
name = "rust-expense-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
